--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -2,7 +2,7 @@
     
 
     <div class="container">
-     <h1 class="text-center"><strong>all Categorys</strong> </h1>
+     <h1 class="text-center"><strong>All Users</strong> </h1>
          <div class="row " style="margin-top: 160px;" >
              <div class="col-lg-3 mb-5" *ngFor="let c of users"  >
                  <div  class="box shadow-sm" style="background:linear-gradient(to bottom right,#90caf9,#fff )" >
