--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,9 +3,9 @@
 <section class="home" style="padding-top: 60px;">
     <img src="../../../assets/img/back.jpg">
     
-    <div class="homecontent" style="padding-top: 27%;" >
+    <div class="homecontent" style="padding-top: 6%;" >
     <h1>Start Learning For  Future bright</h1>
-    <button routerLink="courses"  class="bv2" >Discover Courses</button> &nbsp;
+    <button routerLink="center-former"  class="bv2" >Discover Trainings</button> &nbsp;
     <button routerLink="thirdof" class="bv"  >Join Now</button>
     
     </div>
@@ -32,7 +32,7 @@
           <div class="col-sm mt-2 mb-2 ">
             <div style="background-color: #eeeeee " class="stepBox">
   
-              <i class="bi bi-people" style="color: var(--primary-color)"><h2 style="color: #261d51;">{{countFormer}}<br/>expert formers</h2></i>
+              <i class="bi bi-patch-check-fill" style="color: var(--primary-color)"><h2 style="color: #261d51;">{{countFormer}}<br/>expert formers</h2></i>
   
             </div>
           </div>
@@ -96,7 +96,7 @@
                   </div>
                   <div class="button">
                     <button class="aboutMe" routerLink="afficheprofile">About Me</button>
-                    <button class="hireMe">Hire Me</button>
+                   <!----<button class="hireMe">Hire Me</button>-->
                   </div>
                 </div>
               </div>
@@ -227,7 +227,7 @@
     <div class="container mt-5 mb-5 teacher">
       <div class="container mt-5" style="opacity: 60%; background-color: blanchedalmond; border-radius: 20px; width: auto;"><h1 class="text-center high">Share your passions on formiw</h1></div>
       
-      <p class="text-center"><span class="high2">give private and group lessons and </span> <span class="high3">monetize your knowledge.</span> <br> <br> <a class="btn btn-lg bv3" style="position: relative;" >join Now </a></p>
+      <p class="text-center"><span class="high2">give private and group lessons and </span> <span class="high3">monetize your knowledge.</span> <br> <br> <a class="btn btn-lg bv3" style="position: relative;"  routerLink="thirdof">join Now </a></p>
     
       
 
