--- a/src/app/pages/registerstudent/registerstudent.component.css
+++ b/src/app/pages/registerstudent/registerstudent.component.css
@@ -1,7 +1,7 @@
-.register-student{
+.main-content{
     
     background-color: #eff6ff;
-    padding: 70px 100px;
+    padding-right: 400px;
 }
 .bv{
     background-color: #261d51;
