--- a/src/app/pages/thirdof/thirdof.component.html
+++ b/src/app/pages/thirdof/thirdof.component.html
@@ -1,6 +1,6 @@
 <section class="third" style="padding-top: 100px;">
     <div class="container">
-        <h1 class="text-center">welcome to We Learn</h1>
+        <h1 class="text-center">welcome to Formiw</h1>
     
         <div class="row mt-4 " style="align-items: center;">
             <div class="col-lg-4 mb-5" *ngFor="let cs of third">
