--- a/src/app/pages/affiche-profile/affiche-profile.component.css
+++ b/src/app/pages/affiche-profile/affiche-profile.component.css
@@ -161,7 +161,7 @@
   font-weight: 300;
 }
 
-p {
+.col-md-6 p{
   font-size: 14px;
   margin: 0 0 10px;
 }
@@ -295,3 +295,119 @@ p{
   font-weight: 600;
       color: cadetblue;
 }
+.col-md-6 p{
+  font-weight: 600;
+      color: cadetblue;
+}
+
+
+
+
+.bdge {
+  height: 21px;
+  background-color: orange;
+  color: #fff;
+  font-size: 11px;
+  padding: 8px;
+  border-radius: 4px;
+  line-height: 3px;
+}
+
+.comments {
+  text-decoration: underline;
+  text-underline-position: under;
+  cursor: pointer;
+}
+
+.dot {
+  height: 7px;
+  width: 7px;
+  margin-top: 3px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.hit-voting:hover {
+  color: cadetblue;
+}
+
+.hit-voting {
+  cursor: pointer;
+}
+
+
+
+body{
+  margin-top:20px;
+  background:#eee;
+}
+@media (min-width: 0) {
+  .g-mr-15 {
+      margin-right: 1.07143rem !important;
+  }
+}
+@media (min-width: 0){
+  .g-mt-3 {
+      margin-top: 0.21429rem !important;
+  }
+}
+
+.g-height-50 {
+  height: 50px;
+}
+
+.g-width-50 {
+  width: 50px !important;
+}
+
+@media (min-width: 0){
+  .g-pa-30 {
+      padding: 2.14286rem !important;
+  }
+}
+
+.g-bg-secondary {
+  background-color: #fafafa !important;
+}
+
+.u-shadow-v18 {
+  box-shadow: 0 5px 10px -6px rgba(0, 0, 0, 0.15);
+}
+
+.g-color-gray-dark-v4 {
+  color: #777 !important;
+}
+
+.g-font-size-12 {
+  font-size: 0.85714rem !important;
+}
+
+.media-comment {
+  margin-top:20px
+}
+body{background: #eee}
+.date{font-size: 11px}
+
+.comment-text{font-size: 12px}
+
+.fs-12
+{font-size: 12px}
+
+.shadow-none
+{box-shadow: none
+}
+
+.name
+{color: #5C5C5C;
+  font-size: 15px;
+}
+
+
+.cursor:hover
+{color: cadetblue
+}
+.cursor
+{cursor: pointer
+}
+.textarea{resize: none}
