--- a/src/app/pages/center-courses/center-courses.component.html
+++ b/src/app/pages/center-courses/center-courses.component.html
@@ -1,7 +1,7 @@
 <section class="course" style="padding-top: 80px;">
   
     <div class="container">
-      <h1 class="text-center"><strong>{{Category}} Courses</strong></h1>
+      <h1 class="text-center"><strong>{{Category}} </strong></h1>
         
       <div class="row mt-5" >
              <div class="col-lg-4 mb-5" *ngFor="let cc of courses">
@@ -20,7 +20,7 @@
          <div class="desc " style="font-weight:bold; font-size: large; opacity:90%;">
            <i class="fa fa-book"></i>&nbsp;{{cc.courseName}}
            </div>
-           <p class="date"><i class="fa fa-calendar"></i>&nbsp;01 Sep 2022</p>
+           <p class="date"><i class="fa fa-calendar"></i>&nbsp; {{cc.date}}</p>
          <div class="contacts" style="display: block;">
            <a href=""><i class="fa fa-location-arrow"></i><span style="margin-left:10px;"> {{cc.city}}</span></a>
            <a href=""><i class="fa fa-phone"></i><span style="margin-left:10px;" >{{cc.phoneNumber}}</span></a>
