--- a/src/app/pages/home-center/home-center.component.html
+++ b/src/app/pages/home-center/home-center.component.html
@@ -2,13 +2,13 @@
 <nav class="menu" tabindex="0" style="padding-top: 60px;">
 	<div class="smartphone-menu-trigger" ></div>
   <header class="avatar">
-		<img  src="../../../assets/img/img3.jpg" />
+    <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image">
     <h2>{{centerAuthService.loggedUser}}</h2>
   </header>
 	<ul>
-    <li tabindex="0" class="icon-messages"><span style="font-size: medium; color: #261d51; font-weight: bold;padding-left: 10px;">Messages</span></li>
+    <li tabindex="0" class="icon-cv"><span style="font-size: medium; color: #261d51; font-weight: bold;padding-left: 10px;" routerLink="candidature">CV</span></li>
     <li tabindex="0" class="icon-teams"><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;" routerLink="teams">Teams</span></li>
-    <li tabindex="0" class="icon-prof" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Prof</span></li>
+    <li tabindex="0" class="icon-calendar" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;" routerLink="recherche-prof-center">Prof</span></li>
     <li tabindex="0" class="icon-add" data-toggle="modal" data-target="#exampleModal" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Post add</span></li>
     <li tabindex="0" class="icon-add" data-toggle="modal" data-target="#example2Modal" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Post announcement</span></li>
 
@@ -20,20 +20,71 @@
 
 <main >
   
-  <div class="container mt-7" style="padding-top: 160px; margin-left: 310px;margin-right:auto; ">
+  <div class="container mt-7" style="padding-top: 20px; margin-left: 310px;margin-right:auto; ">
+    <div class="row container d-flex justify-content-center" *ngFor="let u of user">
+      <div class="col-xl-12 col-md-12">
+        <div class="card user-card-full">
+          <div class="row m-l-0 m-r-0">
+            <div class="col-sm-4 bg-c-lite-green user-profile">
+             <div class="card-block text-center text-white">
+               <div class="m-b-25">
+                  <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image">
+                    </div>
+                    <h6 class="f-w-600">Center name</h6>
+                     <p>GoCode</p>
+                     <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                      </div>
+                        </div>
+                          <div class="col-sm-8">
+                             <div class="card-block">
+                                <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
+                                   <div class="row">
+                                      <div class="col-md-6">
+                                          <p class="m-b-10 f-w-600">Email</p>
+                                             <h6 class="text-muted f-w-400">{{u.userEmail}}</h6>
+                                               </div>
+                                                 <div class="col-md-6">
+                                                   <p class="m-b-10 f-w-600">Phone</p>
+                                                      <h6 class="text-muted f-w-400">{{u.userTelephoneNumber}}</h6>
+                                                         </div>
+                                                           </div>
+                                                                      
+                                                            <div class="row">
+                                                              <div class="col-md-6">
+                                                               <p class="m-b-10 f-w-600">Place</p>
+                                                                   <h6 class="text-muted f-w-400">{{u.userCity}}</h6>
+                                                                          </div>
+                                                                          <div class="col-md-6">
+                                                                              <p class="m-b-10 f-w-600">Address</p>
+                                                             <h6 class="text-muted f-w-400">{{u.userAddress}}</h6>
+                              </div>
+                         </div>
+                       <ul class="social-link list-unstyled m-t-40 m-b-10">
+                             <li><a data-toggle="tooltip" data-placement="bottom" title="" data-original-title="facebook" data-abc="true"><i class="mdi mdi-facebook feather icon-facebook facebook" aria-hidden="true"></i></a></li>
+                            <li><a  data-toggle="tooltip" data-placement="bottom" title="" data-original-title="twitter" data-abc="true"><i class="mdi mdi-twitter feather icon-twitter twitter" aria-hidden="true"></i></a></li>
+                           <li><a  data-toggle="tooltip" data-placement="bottom" title="" data-original-title="instagram" data-abc="true"><i class="mdi mdi-instagram feather icon-instagram instagram" aria-hidden="true"></i></a></li>
+                       </ul>
+                   </div>
+                 </div>
+              </div>
+             </div>
+         </div>
+     </div>
+
+  
     <!-- Table -->
     <div class="row">
   
       <div class="col" >
         <div class="card shadow">
           <div class="card-header border-0">
-            <h3 class="mb-0">All courses</h3>
+            <h3 class="mb-0">All Trainings</h3>
           </div>
           <div class="table-responsive">
             <table class="table align-items-center table-flush">
               <thead class="thead-light">
                 <tr>
-                  <th scope="col">Course</th>
+                  <th scope="col">Trainings</th>
                   <th scope="col">Date</th>
                   <th scope="col">Status</th>
                   <th scope="col">Place</th>
@@ -127,7 +178,7 @@
   <div class="modal-dialog modal-dialog-centered " role="document" style="margin: auto; ">
     <div class="modal-content" style="padding-top: 15px;">
       <div class="modal-header " style="align-items: center; align-self: center; display: flex;" >
-          <h1 class="modal-title " id="modal-basic-title" style="font-family: cursive; opacity: 80%;" >Upload Courses</h1>
+          <h1 class="modal-title " id="modal-basic-title" style="font-family: cursive; opacity: 80%;" >Upload Trainings</h1>
 
          </div>
         
@@ -325,6 +376,20 @@
         
            </div>
           
+    </div>
+  </div>
+</div>
+
+<p style="padding-left: 400px;">
+  <button type="button" class="btn btn-outline-primary" (click)="collapse.toggle()" [attr.aria-expanded]="!isCollapsed"
+    aria-controls="collapseExample">
+    Toggle
+  </button>
+</p>
+<div #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
+  <div class="card" style="margin-left: 250px;margin-right: 150px; ">
+    <div class="card-body">
+      You can collapse this card by clicking Toggle
     </div>
   </div>
 </div>
