--- a/src/app/pages/home-former/home-former.component.html
+++ b/src/app/pages/home-former/home-former.component.html
@@ -9,28 +9,35 @@
   </header>
  
 	<ul>
-    <li tabindex="0" class="icon-messages"><span style="font-size: medium; color: #261d51; font-weight: bold; padding-left: 10px;">Messages</span></li>
-    <hr>
-    <li tabindex="0" class="icon-calendar"><span style="font-size: medium; color: #261d51; font-weight:bold;padding-left: 10px;" routerLink="planning-former">Events</span></li>
-    <hr>
-    <li tabindex="0" class="icon-suggestions"><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Suggestions</span></li>
-    <hr>
-    <li tabindex="0" class="icon-add" data-toggle="modal" data-target="#example2Modal" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Post add</span></li>
-    <hr>
-    <li tabindex="0" class="icon-add" data-toggle="modal" data-target="#exampleModal" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Add CV</span></li>
+    <li tabindex="0" class="icon-messages"><span style="font-size: medium; color: #261d51; font-weight: bold;padding-left: 10px;" routerLink="studentprofile">Profile</span></li>
 
+    <li tabindex="0" class="icon-cv"><span style="font-size: medium; color: #261d51; font-weight: bold;padding-left: 10px;" routerLink="cv">CV</span></li>
+
+
+    <li tabindex="0" class="icon-calendar"><span style="font-size: medium; color: #261d51; font-weight:bold;padding-left: 10px;" routerLink="planning-former">Events</span></li>
+
+    <li tabindex="0" class="icon-suggestions"><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;" routerLink="announcement">Announcement </span></li>
+
+    <li tabindex="0" class="icon-add" data-toggle="modal" data-target="#example2Modal" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Post add</span></li>
+   <!---- <hr>
+    <li tabindex="0" class="icon-add" data-toggle="modal" data-target="#exampleModal" ><span style="font-size: medium; color: #261d51;font-weight:bold;padding-left: 10px;">Find new opportunity</span></li>
+   -->
   </ul>
 
 </nav>
 <main style="background-color: #fafafa; margin-left: 80px; padding-right:2%;">
-  <div class="container1 mt-7" style="padding-top: 160px; margin-left: 235px;margin-right:auto; ">
+  <div class="container1 mt-7" style="padding-top: 5px; margin-left: 235px;margin-right:auto; ">
     <!-- Table -->
+
     <div class="row">
+      
+      <div class="col-lg-8 page-content">
+     <div class="row" style="padding-top:60px ;">
   
       <div class="col">
         <div class="container1 shadow" id="card1">
           <div class="card-header border-0">
-            <h3 class="mb-0">All courses</h3>
+            <h3 class="mb-0">All Trainings</h3>
           </div>
           <div class="table-responsive">
             <table class="table align-items-center table-flush">
@@ -39,7 +46,6 @@
                   <th scope="col">Course</th>
                   <th scope="col">Price</th>
                   <th scope="col">Status</th>
-                  <th scope="col">Learner</th>
                   <th scope="col"></th>
                 </tr>
               </thead>
@@ -61,12 +67,7 @@
                       <i class="bg-success"></i><span style="color:#000 ;">confirmed</span>
                     </span>
                   </td>
-                  <td >
-                    
-                    <span style="color:#000 ;">{{getStudentByCourses(39)}}</span>
-                    
                   
-                </td>
                   
                   <td class="text-right">
                     <div class="dropdown">
@@ -113,14 +114,50 @@
       </div>
     </div>
     
+  </div>
+  
+    <div class="right-bar col-lg-4">
+      <div class="top-part">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="feather feather-users">
+          <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
+          <circle cx="9" cy="7" r="4" />
+          <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
+          <path d="M16 3.13a4 4 0 0 1 0 7.75" /></svg>
+        <div class="count">{{count}}</div>
+      </div>
+      <div class="header">All reviews</div>
+      <div class="right-content">
+        
+        <div class="task-box blue" *ngFor="let r of reviews">
+          <div class="description-task">
+            <div class="time">New Review !</div>
+            <div class="task-name">{{r.userName}}</div>
+          </div>
+          
+          <div class="dropdown more-button">
+          
+          <div  class="btn " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></div>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" (click)="accept(loggedEmail,r.id)" >Accept</a>
+            <a class="dropdown-item" (click)="DeleteReview(r.id)" >Refuse</a>
+          </div>
+        </div>
+         
+        </div>
+        
+      </div>
+    </div>
+  
+  </div>
    
   </div>
   
   
 
-
-
 <div class="container shadow-lg" style="margin-top: 160px;background-color: #fff; margin-left: 200px; border-radius: 7px; ">
+
   <div class="row mt-5" *ngFor="let a of annonces" >
       <div class="col-lg-4 " >
         <div class="card"  >
@@ -143,6 +180,7 @@
       </div>
   </div>
 </div>
+
 </main>
 
 
@@ -155,7 +193,7 @@
   <div class="modal-dialog modal-dialog-centered " role="document" style="margin: auto; ">
     <div class="modal-content" style="padding-top: 15px;">
       <div class="modal-header " style="align-items: center; align-self: center; display: flex;">
-          <h1 class="modal-title " id="modal-basic-title" style="font-family: cursive; opacity: 80%;" >Upload Courses</h1>
+          <h1 class="modal-title " id="modal-basic-title" style="font-family: cursive; opacity: 80%;" >Upload Trainings</h1>
          </div>
         
          
@@ -238,8 +276,10 @@
   <div class="modal-dialog modal-dialog-centered " role="document" style="margin: auto; ">
     <div class="modal-content" style="padding-top: 15px;">
       <div class="modal-header " style="align-items: center; align-self: center; display: flex;">
-          <h2 class="modal-title " id="modal-basic-title" >Welcome  </h2>
+          <h2 class="modal-title " id="modal-basic-title" >Are you looking for a new Job!  </h2>
+          
          </div>
+         <small style="align-items: center; align-self: center; display: flex;">Please complete the following statement</small>
          <div class="alert alert-success" *ngIf='message==1'  style="margin: 20px;padding-bottom: 5px;" >You have successfully added</div>
         
         <form [formGroup]="courseForm">
@@ -247,14 +287,14 @@
         <div class="modal-body" style="margin: 20px;" >
          
               <div class="form-group"  style="padding-top: 5px;">
-                <label for="phone" style="padding-bottom: 5px;"><strong>Picture</strong></label>
-                <input type="file" name="" id="" formControlName="picture" class="form-control" (change)="fnChange({event : $event})">
+                <label for="phone" style="padding-bottom: 5px;"><strong>Skills</strong><span class="text-danger"> *</span></label>
+                <textarea type="file" name="" id="" formControlName="skills" class="form-control" (change)="fnChange({event : $event})"></textarea>
              </div>
              
                 
                 <div class="form-group"  style="padding-top: 5px;">                
-                  <label for="description" style="padding-bottom: 5px;"><strong>Description</strong></label>         
-                  <input type="text" name="" id="" formControlName="description" class="form-control">              
+                  <label for="description" style="padding-bottom: 5px;"><strong>Interests</strong><span class="text-danger"> *</span></label>         
+                  <textarea type="text" name="" id="" formControlName="interests" class="form-control">  </textarea>            
                 </div>
              
               </div>
