--- a/src/app/pages/registerstudent/registerstudent.component.html
+++ b/src/app/pages/registerstudent/registerstudent.component.html
@@ -1,16 +1,21 @@
-
-
-<section class="register-student" style="padding-top: 80px;">
-    <div class="container mt-1 mb-1 m-auto shadow-lg " style="background-color: #fff;">
-      <br>
-        <h2 class="col-lg-6  m-auto" style="font-weight: bold ;font-size: 2em;align-items: center; text-align: center;">Student Registration</h2><br>
-        
-        <form #myForm="ngForm"  (ngSubmit)="myForm.valid && registerNewStudent(myForm)"  class="register col-lg-6 m-auto " style="font-weight: bold ;font-size: 1.2em;" >
-         <div class="alert alert-danger" *ngIf='invalidLogin'>{{errorMessage}}</div>
-        <!--- <div class="alert alert-danger" *ngIf="userPassword!=userConfirmPassword" > 
+<div class="main-content "  >
+  <div class="container-fluid mt-5" style="padding-top: 60px; margin-left: auto; margin-right: auto;">
+     <br>
+    
+       <form #myForm="ngForm"  (ngSubmit)="myForm.valid && registerNewStudent(myForm)"  class="register col-lg-6 m-auto " style="font-weight: bold ;font-size: 1.2em;" >
+          <div class="col-md-12 " >
+            
+            <div class="card  mr-4 shadow-lg " style="border-radius: 7px; width: 800px; padding: 30px; margin-left: auto; margin-right: auto;">
+              <a style=" text-align:center; " ><img src="../../../assets/img/welearn4.png" sizes="60px" alt="..." height="60px"> </a>
+          
+              <h2 class="col-lg-6  m-auto" style="font-weight: bold ;font-size: 2em;align-items: center; text-align: center;">Learner Registration</h2><br>
+              
+          <!--- <div class="alert alert-danger" *ngIf="userPassword!=userConfirmPassword" > 
             <strong>The username or password is incorrect. Try again.</strong>
           </div>-->
             <div class="row">
+              <div class="alert alert-danger" *ngIf='invalidLogin'>{{errorMessage}}</div>
+        
                 <div class="col-lg-6 mt-2 mb-2">
                     <label >Full Name <span class="text-danger">*</span></label>
                     <input  name="userFullName"  [(ngModel)]="user.userFullName" #userFullName="ngModel" [ngClass]="{'is-invalid':myForm.submitted && userFullName.invalid}" required type="text" class="form-control"  >
@@ -44,7 +49,7 @@
                 <div class="col-lg-6 mt-2 mb-2">
                     <label  for="gender" >Gender <span class="text-danger">*</span></label>
                     <br>
-                    <select class="form-control" [(ngModel)]="user.userGender" name="userGender"  #userGender="ngModel" [ngClass]="{'is-invalid':myForm.submitted && userGender.invalid}" required id="gender" style="width:245px;height:39px;border-radius: 20px;" >
+                    <select class="form-control" [(ngModel)]="user.userGender" name="userGender"  #userGender="ngModel" [ngClass]="{'is-invalid':myForm.submitted && userGender.invalid}" required id="gender" style="width:347px;height:39px;border-radius: 20px;" >
                    <option value=""></option>
                       <option value="Male" >Male</option>
                       <option value="Female">Female</option>
@@ -83,8 +88,11 @@
       
       
             </div>
+          </div>
+        </div>
+        
         </form>
       </div>
-      
+     
 
-</section>
+    </div>
