--- a/src/app/sharepages/header/header.component.html
+++ b/src/app/sharepages/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light  mb-3">
   <div class="container-fluid " style="padding: 7px;">
     <a class="navbar-brand" routerLink="home"><img src="../../../assets/img/welearn4.png" sizes="20px" alt="..." height="36"> <span style="color: #261d51; font-family: cursive; 
-      font-weight: bold;">We Learn</span></a>
+      font-weight: bold;">Formiw</span></a>
 
     <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
     <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
@@ -48,6 +48,11 @@
   class="nav-link" routerLink="home-center">
     <mat-icon style="color: #261d51;" matTooltip="Dashboard">dashboard</mat-icon>
   </button>
+  <button mat-mini-fab color="primary" aria-label="Example icon button with a delete icon" 
+  *ngIf="centerservice.roleMatchC(['Admin'])&& isLoggedIn()"
+  class="nav-link" routerLink="admin">
+    <mat-icon style="color: #261d51;" matTooltip="Dashboard">dashboard</mat-icon>
+  </button>
 
       </li>
   
@@ -59,10 +64,10 @@
           <a  *ngIf="userService.roleMatch(['Student'])"class="nav-link" routerLink="courses">Student</a>
         </li>-->
         <li class="nav-item">
-          <a class="nav-link" *ngIf="! isLoggedIn()" routerLink="center-former" style="font-weight: bold;font-size: 1.2em;">Courses</a>
+          <a class="nav-link" *ngIf="! isLoggedIn()" routerLink="center-former" style="font-weight: bold;font-size: 1.2em;">Trainings</a>
         </li>
         
-        <li class="nav-item " >
+      <li class="nav-item " >
           
           <button mat-icon-button  *ngIf="studentService.roleMatch(['Student'])&&isLoggedIn()" 
           class="nav-link b   " routerLink="studentprofile" 
@@ -73,15 +78,15 @@
 
         
         
-        <li class="nav-item ">
+    <!----<li class="nav-item ">
           
           <button mat-icon-button  *ngIf="centerservice.roleMatchC(['Center'])&& isLoggedIn()" class="nav-link b   " routerLink="studentprofile" aria-label="Example icon button with a heart icon">
             <mat-icon style="color: #261d51;" matTooltip="Favorites">account_circle</mat-icon>
             
            
           </button>
-        </li>
-        <li class="nav-item ">
+        </li>-->
+    <li class="nav-item ">
           
           <button mat-icon-button  *ngIf="studentService.roleMatch(['Student'])&&isLoggedIn()" class="nav-link b   " routerLink="favoriteStudent" aria-label="Example icon button with a heart icon">
             <mat-icon style="color: #261d51;">favorite</mat-icon>
@@ -90,9 +95,7 @@
         </li>
         <li class="nav-item ">
           
-          <button mat-icon-button  *ngIf="studentService.roleMatch(['Student'])&&isLoggedIn()" class="nav-link b   " routerLink="image" aria-label="Example icon button with a heart icon">
-            <mat-icon style="color: #261d51;">Image</mat-icon>
-          </button>
+      
           
         </li>
         <li class="nav-item ">
@@ -105,14 +108,14 @@
         </li>
         <li class="nav-item ">
           
-          <button mat-icon-button  *ngIf="formerService.roleMatchF(['Former'])&&isLoggedIn()" class="nav-link b   " routerLink="studentprofile" aria-label="Example icon button with a heart icon">
+          <button mat-icon-button  *ngIf="formerService.roleMatchF(['Former'])&&isLoggedIn()" class="nav-link b   " routerLink="announcement" aria-label="Example icon button with a heart icon">
             <mat-icon style="color: #261d51;" matTooltip="Center's announcment">account_balance</mat-icon>
           </button>
         </li>
         
         <li class="nav-item ">
           
-          <button mat-icon-button  *ngIf="formerService.roleMatchF(['Former'])&&isLoggedIn()" class="nav-link b   " routerLink="studentprofile" aria-label="Example icon button with a heart icon">
+          <button mat-icon-button  *ngIf="formerService.roleMatchF(['Former'])&&isLoggedIn()" class="nav-link b   " routerLink="cv" aria-label="Example icon button with a heart icon">
             <mat-icon style="color: #261d51;" matTooltip="Your CV">description</mat-icon>
           </button>
         </li>
